--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "nodemon --inspect src/index.js",
-    "watch": "node-sass --watch src/resources/scss --output src/public/css",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TusProtein/nodejs_blog.git"
-  },
-  "keywords": [
-    "test",
-    "blog",
-    "nodejs"
-  ],
-  "author": "anhtus",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TusProtein/nodejs_blog/issues"
-  },
-  "homepage": "https://github.com/TusProtein/nodejs_blog#readme",
-  "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "nodemon --inspect src/index.js",
+        "watch": "node-sass --watch src/resources/scss --output src/public/css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TusProtein/nodejs_blog.git"
+    },
+    "keywords": [
+        "test",
+        "blog",
+        "nodejs"
+    ],
+    "author": "anhtus",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/TusProtein/nodejs_blog/issues"
+    },
+    "homepage": "https://github.com/TusProtein/nodejs_blog#readme",
+    "dependencies": {
+        "express": "^4.18.2",
+        "express-handlebars": "^7.1.2"
+    },
+    "lint-staged": {
+        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "devDependencies": {
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2",
+        "morgan": "^1.10.0",
+        "node-sass": "^9.0.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.3"
+    }
 }
