--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "express-handlebars": "^7.1.2"
     },
     "lint-staged": {
-        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+        "src/**/*.{js,json,scss}": "prettier --single-quote all --trailing-comma all --tab-width 4 --write"
     },
     "husky": {
         "hooks": {
