--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "main": "src/index.js",
     "scripts": {
+        "beautiful": "lint-staged",
         "start": "nodemon --inspect src/index.js",
         "watch": "node-sass --watch src/resources/scss --output src/public/css",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,7 +30,7 @@
         "express-handlebars": "^7.1.2"
     },
     "lint-staged": {
-        "src/**/*.{js,json,scss}": "prettier --single-quote all --trailing-comma all --tab-width 4 --write"
+        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
     },
     "husky": {
         "hooks": {
