--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "homepage": "https://github.com/TusProtein/nodejs_blog#readme",
     "dependencies": {
         "express": "^4.18.2",
-        "express-handlebars": "^7.1.2"
+        "express-handlebars": "^7.1.2",
+        "mongoose": "^8.0.0",
+        "mongoose-slug-updater": "^3.3.0"
     },
     "lint-staged": {
         "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
