--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     },
     "homepage": "https://github.com/TusProtein/nodejs_blog#readme",
     "dependencies": {
+        "axios": "^1.6.1",
         "express": "^4.18.2",
         "express-handlebars": "^7.1.2",
+        "jquery": "^3.7.1",
         "method-override": "^3.0.0",
         "mongoose": "^8.0.0",
+        "mongoose-delete": "^1.0.1",
         "mongoose-slug-updater": "^3.3.0"
     },
     "lint-staged": {
