--- a/package.json
+++ b/package.json
@@ -27,18 +27,25 @@
   "homepage": "https://github.com/TusProtein/nodejs_blog#readme",
   "dependencies": {
     "axios": "^1.6.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.12.0",
     "mongoose-delete": "^1.0.1",
+    "mongoose-findorcreate": "^4.0.0",
     "mongoose-sequence": "^5.3.1",
-    "mongoose-slug-updater": "^3.3.0"
+    "mongoose-slug-updater": "^3.3.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0"
   },
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
