--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,19 @@
 {
-    "singleQuote": true,
-    "printWidth": 80,
-    "bracketSpacing": true,
-    "bracketSameLine": false,
-    "tabWidth": 2,
-    "semi": true,
-    "endOfLine": "lf",
-    "arrowParens": "avoid",
-    "overrides": [
-      {
-        "files": "*.hbs",
-        "options": {
-          "parser": "html"
-        }
+  "singleQuote": true,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "tabWidth": 2,
+  "semi": true,
+  "endOfLine": "lf",
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": "*.hbs",
+      "options": {
+        "parser": "html",
+        "printWidth": 80
       }
-    ]
-  }
+    }
+  ]
+}
